--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buyer's Page</title>
     <style>
-        /* ... (no changes in styles) */
+        /* ... (original styles) */
     </style>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="#sell">Sell</a></li>
             </ul>
@@ -32,7 +32,7 @@
         <section id="sell">
             <h2>Sell Your Product</h2>
             <form id="sell-form">
-                <!-- ... (no changes in form) -->
+                <!-- ... (original form content) -->
             </form>
         </section>
     </main>
