--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buyer's Page</title>
     <style>
-        /* ... (original styles) */
+        /* ... (no changes in styles) */
     </style>
 </head>
 <body>
@@ -32,7 +32,7 @@
         <section id="sell">
             <h2>Sell Your Product</h2>
             <form id="sell-form">
-                <!-- ... (original form content) -->
+                <!-- ... (no changes in form) -->
             </form>
         </section>
     </main>
