--- a/about.html
+++ b/about.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Senctuate</title>
+    <title>About Senctuate E-Market</title>
     <style>
         /* Add your styles here */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #03a9f4; /* Vibrant blue header */
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline-block;
+            margin-right: 20px;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+        }
+        .icon-space {
+            display: inline-block;
+            margin-left: 20px;
+        }
+        .about {
+            padding: 20px;
+        }
+        h1, h2 {
+            color: #03a9f4; /* Vibrant blue headings */
+        }
+        footer {
+            background-color: #f5f5f5; /* Soft gray footer */
+            padding: 10px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -23,12 +61,21 @@
     </header>
     <main>
         <section class="about">
-            <h1>About Senctuate</h1>
-            <p>Senctuate is a holistic online marketplace dedicated to connecting buyers and sellers of spiritual and wellness products.</p>
-            <h2>Our Mission</h2>
-            <p>To provide a platform for individuals to find and purchase products that support their spiritual growth and wellness journey.</p>
-            <h2>Our Values</h2>
-            <p>We value community, collaboration, and the pursuit of spiritual growth and wellness.</p>
+            <h1>Welcome to Senctuate E-Market</h1>
+            <p>Senctuate E-Market is an online marketplace where sellers can showcase and sell their products to a wide audience.</p>
+            <h2>How it Works</h2>
+            <p>Sellers can create a store and upload their products, which will be displayed in our marketplace. Buyers can browse and purchase products from various stores, all in one place.</p>
+            <h2>Benefits for Sellers</h2>
+            <p>By selling on Senctuate E-Market, you can:</p>
+            <ul>
+                <li>Reach a wider audience</li>
+                <li>Increase your online presence</li>
+                <li>Manage your store and products easily</li>
+            </ul>
+            <h2>Store Links</h2>
+            <p>Each seller's store will have a unique link, making it easy for customers to find and visit their store.</p>
+            <h2>Get Started</h2>
+            <p>Ready to start selling on Senctuate E-Market? <a href="#sell">Create your store today!</a></p>
         </section>
     </main>
     <footer>
