--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#product-list">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="#add-store">Add Your Store</a></li>
             </ul>
@@ -61,7 +61,7 @@
         </nav>
     </header>
     <main>
-        <section class="product-list">
+        <section class="product-list" id="product-list">
             <h2>Explore Our E-Market</h2>
             <p>Welcome to Senctuate E-Market, your one-stop digital marketplace for discovering new stores. Browse our collection of stores and visit their websites!</p>
             <div id="store-container">
