--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#product-list">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="#add-store">Add Your Store</a></li>
+                <li><button onclick="location.href='#product-list'">Home</button></li>
+                <li><button onclick="location.href='about.html'">About</button></li>
+                <li><button onclick="location.href='#add-store'">Add Store</button></li>
             </ul>
             <img src="SC.png" alt="Senctuate Community Logo" style="width: 100px; height: 100px; object-fit: cover;">
         </nav>
