--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
             <h2>Store Links</h2>
             <p>Each seller's store will have a unique link, making it easy for customers to find and visit their store.</p>
             <h2>Get Started</h2>
-            <p>Ready to start selling on Senctuate E-Market? <a href="#sell">Create your store today!</a></p>
+            <p>Ready to start selling on Senctuate E-Market? <button><a href="index.html#add-store">Add Your Store</a></button></p>
         </section>
     </main>
     <footer>
