--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
                 <input type="file" id="store-image" name="store-image" accept="image/*"><br><br>
                 <label for="store-link">Store Link:</label>
                 <input type="text" id="store-link" name="store-link"><br><br>
+                <label for="store-description">Store Description:</label>
+                <textarea id="store-description" name="store-description"></textarea><br><br>
                 <button id="submit-store">Add Store</button>
             </form>
         </section>
@@ -93,3 +95,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
